--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Welcome Screen -->
     <div id="welcome-screen" class="welcome-screen">
         <div class="welcome-content">
-            <h1 class="welcome-title">💕 Welcome to Your Valentine's Page 💕 -By ANUBHAV </h1>
+            <h1 class="welcome-title">💕 Welcome to Your Valentine's Page 💕 <br>-By ANUBHAV </h1>
             <div id="sender-form" class="name-form">
                 <p class="form-text">Let's personalize this special page!</p>
                 <input type="text" id="sender-name" placeholder="Your name (the sender)" class="name-input">
